--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -230,6 +230,14 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　全順序の方が重要だぜ」  
 
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　その　`Common`　のデータは、本来　上長が持っておくべきものを　部下に渡しただけじゃないの？  
+なんでもかんでも　`Common`　にデータが置かれて、  
+`Common` にアクセスできるコマンダーは結局、リバース・ワーカーになるんじゃないの？」    
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　`Common` に置くのは　あくまで　同僚間で共有するであろうデータだぜ。用法を間違えば　階層の序列は崩壊する」  
+
 # ソース・フォルダーの使い方
 
 ```plaintext
