--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -238,6 +238,9 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　`Common` に置くのは　あくまで　同僚間で共有するであろうデータだぜ。用法を間違えば　階層の序列は崩壊する」  
 
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　このトピックに名前を付けておくと、　**コモン・オブ・ヒエラルキー**　とかどうだぜ？」  
+
 # ソース・フォルダーの使い方
 
 ```plaintext
