--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -241,6 +241,34 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　このトピックに名前を付けておくと、　**コモン・オブ・ヒエラルキー**　とかどうだぜ？」  
 
+## コモンが　めちゃくちゃ　でかくなる
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　お父ん。ほとんどのコマンダーが　自分の持っているデータを　`Common`　に下げてしまい、  
+`Common`　が　リバース・ワーカーになったぜ」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　横　とは　密　になるわよねえ」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　ネットワーク状になるんだろ。ヒエラルキーを侵食していくぜ」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　あるところは　密なネットワーク　で、  
+あるところを部分的に見ると　全順序　で、  
+全体としては　半順序　な、  
+そのような　機械的には収束しない、　**振動する不定形なモデル**　を想像しないと　いけなくない？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　現実的にはそうなるか。　しかし　**なんらかのあるべき状態へ戻ろうとするちから**　が働かないと　序列は崩壊するぜ」  
+
+## メンバー・ネットワーク
+
+![202309_program_17-1903--memberNetwork.png](https://crieit.now.sh/upload_images/070a0e3594ba0f63294484d3ef3c63036506cf9c00325.png)  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　ぐちゃぐちゃの　密結合を認める空間、 **メンバー・ネットワーク** （Member Network） を認めることにするぜ」  
+
 # ソース・フォルダーの使い方
 
 ```plaintext
