--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -269,6 +269,24 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　👆　ぐちゃぐちゃの　密結合を認める空間、 **メンバー・ネットワーク** （Member Network） を認めることにするぜ」  
 
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　`Member Network` って文字数が １３文字もあって長いので、短くならないの？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　同僚なら `Colleagues`、部下なら `Subordinates` でどうだぜ？」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　長い」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　同僚なら `Co`、部下なら `Sub` でどうだぜ？」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　今度は短すぎる……」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　文字数は `Member Network` よりマシだから、変数名に困ったら `Colleagues` と `Subordinates` を使うことにしましょう」  
+
 # ソース・フォルダーの使い方
 
 ```plaintext
@@ -350,4 +368,4 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 「　階層構造が　分かんなくない？」  
 
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
-「　そんなものは　設計書か何かに書いておけだぜ」  
+「　そんなものは　設計書か何かに書いておけだぜ」
