--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -287,6 +287,14 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 ![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
 「　文字数は `Member Network` よりマシだから、変数名に困ったら `Colleagues` と `Subordinates` を使うことにしましょう」  
 
+## メンバー・ネットワークを認めるのなら、Common は要らんのでは？
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　メンバー・ネットワークを認めるのなら、Common は要らんのでは？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　まったくだぜ」  
+
 # ソース・フォルダーの使い方
 
 ```plaintext
