--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -287,6 +287,12 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 ![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
 「　文字数は `Member Network` よりマシだから、変数名に困ったら `Colleagues` と `Subordinates` を使うことにしましょう」  
 
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　`Member Network`　は単に　`Members`　で十分よね」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　分かった、分かった」  
+
 ## メンバー・ネットワークを認めるのなら、Common は要らんのでは？
 
 ![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
@@ -294,6 +300,34 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　まったくだぜ」  
+
+## 話しを覆すが
+
+![202309_program_18-0233--Members.png](https://crieit.now.sh/upload_images/fbdc5381f8a7d0a25ed746059d54e5586507399c6b934.png)  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　上長と　部下の間に　`Members` という名前の　メディエーター（Mediator；仲介者）を置くことにするぜ」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　なんでまた」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　ネットワーク構造は　すぐ　スパゲッティー・コードと化す。  
+ネットワーク構造を不可とし、ヒエラルキー構造を　強制させることにするぜ」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　今度は　`Members`　メディエーターに　コードが集中してくるんだけど」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　上長と　部下を　シンプルにして、　`Members` メディエーターに　密結合を　押し付けろだぜ。  
+押し入れみたいなもんだぜ」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　部下のコードが　`Members` メディエーターに取り上げられて、  
+部下は　なんにも隣と連携しない　木偶の棒　みたいになってしまうぜ？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　それでいい。それが理想。疎結合。あるべき姿」  
 
 # ソース・フォルダーの使い方
 
